--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -76,6 +76,9 @@
                             <br />
                             <%= link_to "ファイル: #{file.name} の削除", attachment_path(file.id), method: :delete %>
                         <% end %>
+                        
+                        <br />
+                        <iframe src="<%= attachment_path(file.id) %>" frameborder="0" width="auto" height="auto"></iframe>
                     </div>
                     <br />
                 <% end %>
